Fix button contrast issues

--- a/src/styles/custom/_header.scss
+++ b/src/styles/custom/_header.scss
@@ -1,5 +1,6 @@
 .usa-header {
   @include u-bg("base-darkest");
+  @include u-color("base-light");
   position: relative;
   z-index: 2000;
 
